[gd_scene load_steps=16 format=2]

[ext_resource path="res://main_scene/character/Character.gd" type="Script" id=1]
[ext_resource path="res://main_scene/character/MainController.gd" type="Script" id=2]
[ext_resource path="res://main_scene/character/physicsmaterial.tres" type="PhysicsMaterial" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.8233
height = 124.051

[sub_resource type="NoiseTexture" id=2]

[sub_resource type="NoiseTexture" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.834, 20.9566 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.5632, 13.4792 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.55425, 19.5475 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.55425, 15.0053 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6.16309, 16.7074 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5.01749, 11.5844 )

[sub_resource type="CircleShape2D" id=10]
radius = 6.89596

[sub_resource type="CircleShape2D" id=11]
radius = 19.9535

[sub_resource type="Animation" id=12]
resource_name = "Test"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainController/Skeleton2D/Hip/Torso/Arm_upper_R/Arm_lower_R/Arm_hand_R:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.18477, -40.9656 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainController/Skeleton2D/Hip/Torso/Arm_upper_R/Arm_lower_R:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -63.2368 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainController/Skeleton2D/Hip/Torso/Arm_upper_R:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.01437e-06, -32.0601 ]
}

[node name="Character_2" type="Node2D"]
script = ExtResource( 1 )

[node name="MainController" type="KinematicBody2D" parent="."]
position = Vector2( 0.627144, -156.753 )
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainController"]
visible = false
position = Vector2( 2.50943, 58.3369 )
shape = SubResource( 1 )

[node name="Skeleton2D" type="Skeleton2D" parent="MainController"]
position = Vector2( -0.627144, 156.753 )

[node name="Hip" type="Bone2D" parent="MainController/Skeleton2D"]
position = Vector2( 0.0912376, -114.475 )
rotation = 1.56771
rest = Transform2D( 0.00308696, 0.999995, -0.999995, 0.00308696, 0.0912376, -114.475 )
default_length = 27.0

[node name="Torso" type="Bone2D" parent="MainController/Skeleton2D/Hip"]
position = Vector2( -42.3088, 0.0818163 )
rotation = -3.56231e-08
rest = Transform2D( 1, -3.56231e-08, 3.56231e-08, 1, -42.3088, 0.0818163 )
default_length = 42.0

[node name="Arm_upper_R" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso"]
position = Vector2( 0.103561, -28.5069 )
rotation = 3.51574e-08
rest = Transform2D( 1, 3.51574e-08, -3.51574e-08, 1, 0.103561, -28.5069 )
default_length = 34.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Arm_lower_R" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_R"]
position = Vector2( 33.6123, -0.0727806 )
rest = Transform2D( 1, 0, 0, 1, 33.6123, -0.0727806 )
default_length = 23.0
__meta__ = {
"_edit_bone_": true
}

[node name="Arm_hand_R" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_R/Arm_lower_R"]
position = Vector2( 23.1982, 0.0196075 )
rotation = 0.00322485
rest = Transform2D( 0.999995, 0.00322484, -0.00322484, 0.999995, 23.1982, 0.0196075 )
default_length = 14.0
__meta__ = {
"_edit_bone_": true
}

[node name="Arm_upper_L" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso"]
position = Vector2( -0.0689697, 27.3824 )
rotation = 3.51574e-08
rest = Transform2D( 1, 3.51574e-08, -3.51574e-08, 1, -0.0689697, 27.3824 )
default_length = 34.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_L"]
margin_top = -6.0
margin_right = 34.0
margin_bottom = 6.0
color = Color( 0, 0, 0, 1 )

[node name="Arm_lower_L" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_L"]
position = Vector2( 33.6123, -0.0727806 )
rest = Transform2D( 1, 0, 0, 1, 33.6123, -0.0727806 )
default_length = 23.0
__meta__ = {
"_edit_bone_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_L/Arm_lower_L"]
margin_top = -5.0
margin_right = 23.0
margin_bottom = 5.0

[node name="Arm_hand_L" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_L/Arm_lower_L"]
position = Vector2( 23.1982, 0.0196037 )
rotation = 0.00322485
rest = Transform2D( 0.999995, 0.00322484, -0.00322484, 0.999995, 23.1982, 0.0196037 )
default_length = 14.0
__meta__ = {
"_edit_bone_": true
}

[node name="Polygon2D" type="Polygon2D" parent="MainController/Skeleton2D/Hip/Torso/Arm_upper_L/Arm_lower_L/Arm_hand_L"]
position = Vector2( -37.1253, -31.7353 )
rotation = 0.146001
scale = Vector2( 0.419593, 0.419593 )
texture = SubResource( 2 )
polygon = PoolVector2Array( 110.526, 44.0191, 98.5646, 54.5455, 101.914, 70.3349, 116.746, 75.1196, 130.622, 66.9856, 128.23, 50.2392 )
uv = PoolVector2Array( 110.526, 44.0191, 98.5646, 54.5455, 101.914, 70.3349, 116.746, 75.1196, 130.622, 66.9856, 128.23, 50.2392 )

[node name="Head" type="Bone2D" parent="MainController/Skeleton2D/Hip/Torso"]
position = Vector2( 0.0378113, -0.00271973 )
rotation = -3.14158
rest = Transform2D( -1, -1.25488e-05, 1.25488e-05, -1, 0.0378113, -0.00271973 )
default_length = 40.0

[node name="Polygon2D" type="Polygon2D" parent="MainController/Skeleton2D/Hip/Torso/Head"]
position = Vector2( -25.1816, -26.7659 )
scale = Vector2( 0.907857, 0.907857 )
texture = SubResource( 3 )
polygon = PoolVector2Array( 35.5, 12, 29.6651, 19.1388, 27.2727, 28.7081, 30.1435, 38.756, 37.799, 47.3684, 46.89, 51.1962, 57.25, 51.25, 65.75, 47.75, 70.3349, 40.6699, 71.7703, 31.1005, 70.25, 21.5, 63.6364, 12.9187, 55.25, 8.75, 45.4545, 8.13397 )
uv = PoolVector2Array( 36.3636, 13.3971, 29.6651, 19.1388, 27.2727, 28.7081, 30.1435, 38.756, 37.799, 47.3684, 46.89, 51.1962, 55.9809, 51.6746, 65.0718, 49.7608, 70.3349, 40.6699, 72.7273, 31.5789, 70.3349, 18.1818, 64.1148, 11.0048, 53.11, 6.69856, 47.3684, 7.17703 )

[node name="Leg_upper_R" type="Bone2D" parent="MainController/Skeleton2D/Hip"]
position = Vector2( 27.102, -11.2725 )
rotation = 0.00117898
rest = Transform2D( 0.999999, 0.00117898, -0.00117898, 0.999999, 27.102, -11.2725 )
default_length = 39.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_R"]
margin_top = -7.0
margin_right = 39.0
margin_bottom = 7.0
color = Color( 0, 0, 0, 1 )

[node name="Leg_lower_R" type="Bone2D" parent="MainController/Skeleton2D/Hip/Leg_upper_R"]
position = Vector2( 39.1582, -0.0556631 )
rotation = -0.00234693
rest = Transform2D( 0.999997, -0.00234693, 0.00234693, 0.999997, 39.1582, -0.0556631 )
default_length = 39.0
__meta__ = {
"_edit_bone_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_R/Leg_lower_R"]
margin_top = -7.0
margin_right = 39.0
margin_bottom = 7.0

[node name="Leg_feet_R" type="Bone2D" parent="MainController/Skeleton2D/Hip/Leg_upper_R/Leg_lower_R"]
position = Vector2( 38.9403, 0.137728 )
rotation = -1.53691
rest = Transform2D( 0.0338798, -0.999426, 0.999426, 0.0338798, 38.9403, 0.137728 )
default_length = 30.0
__meta__ = {
"_edit_bone_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_R/Leg_lower_R/Leg_feet_R"]
margin_top = -6.0
margin_right = 30.0
margin_bottom = 7.0
color = Color( 0, 0, 0, 1 )

[node name="Leg_upper_L" type="Bone2D" parent="MainController/Skeleton2D/Hip"]
position = Vector2( 27.0613, 11.5567 )
rotation = 0.0286238
rest = Transform2D( 0.99959, 0.0286199, -0.0286199, 0.99959, 27.0613, 11.5567 )
default_length = 39.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_L"]
margin_top = -7.0
margin_right = 39.0
margin_bottom = 7.0
color = Color( 0, 0, 0, 1 )

[node name="Leg_lower_L" type="Bone2D" parent="MainController/Skeleton2D/Hip/Leg_upper_L"]
position = Vector2( 39.1582, -0.0556622 )
rotation = -1.86265e-09
rest = Transform2D( 1, -1.86265e-09, 1.86265e-09, 1, 39.1582, -0.0556622 )
default_length = 39.0
__meta__ = {
"_edit_bone_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_L/Leg_lower_L"]
margin_top = -7.0
margin_right = 39.0
margin_bottom = 7.0

[node name="Leg_feet_L" type="Bone2D" parent="MainController/Skeleton2D/Hip/Leg_upper_L/Leg_lower_L"]
position = Vector2( 38.9403, 0.137727 )
rotation = -1.53691
rest = Transform2D( 0.0338798, -0.999426, 0.999426, 0.0338798, 38.9403, 0.137727 )
default_length = 30.0
__meta__ = {
"_edit_bone_": true
}

[node name="ColorRect" type="ColorRect" parent="MainController/Skeleton2D/Hip/Leg_upper_L/Leg_lower_L/Leg_feet_L"]
margin_top = -6.0
margin_right = 30.0
margin_bottom = 7.0
color = Color( 0, 0, 0, 1 )

[node name="Sprites" type="Node2D" parent="MainController"]

[node name="Hip" type="ColorRect" parent="MainController/Sprites"]
margin_left = -15.0
margin_top = 43.0
margin_right = 14.0
margin_bottom = 70.0

[node name="Torso" type="ColorRect" parent="MainController/Sprites/Hip"]
margin_left = -5.0
margin_top = -43.0
margin_right = 34.0
margin_bottom = -1.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )

[node name="ColorRect" type="ColorRect" parent="MainController/Sprites/Hip/Torso"]
margin_left = 40.4003
margin_top = 2.81335
margin_right = 74.4003
margin_bottom = 14.8134
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="MainController/Sprites/Hip/Torso/ColorRect"]
margin_left = -0.823456
margin_top = 33.615
margin_right = 22.1765
margin_bottom = 43.615

[node name="Polygon2D" type="Polygon2D" parent="MainController/Sprites/Hip/Torso/ColorRect/ColorRect"]
position = Vector2( -4.94797, 23.2136 )
rotation = 1.57093
scale = Vector2( 0.419593, 0.419593 )
offset = Vector2( -97.8, -59.81 )
texture = SubResource( 2 )
polygon = PoolVector2Array( 110.526, 44.0191, 98.5646, 54.5455, 101.914, 70.3349, 116.746, 75.1196, 130.622, 66.9856, 128.23, 50.2392 )
uv = PoolVector2Array( 110.526, 44.0191, 98.5646, 54.5455, 101.914, 70.3349, 116.746, 75.1196, 130.622, 66.9856, 128.23, 50.2392 )

[node name="Torso" type="RigidBody2D" parent="."]
position = Vector2( -0.121248, -156.804 )
rotation = -0.00308069
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
position = Vector2( -0.00370362, 20.7246 )
shape = SubResource( 4 )

[node name="Hip" type="RigidBody2D" parent="Torso"]
position = Vector2( 0.0820819, 42.3088 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip"]
position = Vector2( 0.0183782, 13.5568 )
shape = SubResource( 5 )

[node name="Leg_upper_R" type="RigidBody2D" parent="Torso/Hip"]
position = Vector2( 11.2727, 27.1019 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_R"]
position = Vector2( 4.33331e-05, 19.5083 )
shape = SubResource( 6 )

[node name="Leg_lower_R" type="RigidBody2D" parent="Torso/Hip/Leg_upper_R"]
position = Vector2( 0.0559082, 39.1582 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_R/Leg_lower_R"]
position = Vector2( 4.33331e-05, 19.5083 )
shape = SubResource( 6 )

[node name="Leg_feet_R" type="RigidBody2D" parent="Torso/Hip/Leg_upper_R/Leg_lower_R"]
position = Vector2( -0.15823, 38.9604 )
rotation = -1.53691
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_R/Leg_lower_R/Leg_feet_R"]
position = Vector2( -0.148916, 15.1145 )
shape = SubResource( 7 )

[node name="Leg_upper_L" type="RigidBody2D" parent="Torso/Hip"]
position = Vector2( -11.5559, 27.0614 )
rotation = 0.0286238
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_L"]
position = Vector2( 4.33331e-05, 19.5083 )
shape = SubResource( 6 )

[node name="Leg_lower_L" type="RigidBody2D" parent="Torso/Hip/Leg_upper_L"]
position = Vector2( 0.0559082, 39.1582 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_L/Leg_lower_L"]
position = Vector2( 4.33331e-05, 19.5083 )
shape = SubResource( 6 )

[node name="Leg_feet_L" type="RigidBody2D" parent="Torso/Hip/Leg_upper_L/Leg_lower_L"]
position = Vector2( -0.15823, 38.9604 )
rotation = -1.53691
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Hip/Leg_upper_L/Leg_lower_L/Leg_feet_L"]
position = Vector2( -0.148916, 15.1145 )
shape = SubResource( 7 )

[node name="Arm_upper_R" type="RigidBody2D" parent="Torso"]
position = Vector2( 28.5069, 0.10334 )
rotation = -4.65661e-10
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_R"]
position = Vector2( 0.00837654, 16.8028 )
shape = SubResource( 8 )

[node name="Arm_lower_R" type="RigidBody2D" parent="Torso/Arm_upper_R"]
position = Vector2( 0.0729942, 33.6123 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_R/Arm_lower_R"]
position = Vector2( 0.0247244, 11.4969 )
shape = SubResource( 9 )

[node name="Arm_hand_R" type="RigidBody2D" parent="Torso/Arm_upper_R/Arm_lower_R"]
position = Vector2( -0.019392, 23.1982 )
rotation = 0.00322485
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_R/Arm_lower_R/Arm_hand_R"]
position = Vector2( -0.150108, 6.8453 )
shape = SubResource( 10 )

[node name="Arm_upper_L" type="RigidBody2D" parent="Torso"]
position = Vector2( -27.3824, -0.06884 )
rotation = -4.65661e-10
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_L"]
position = Vector2( 0.00837654, 16.8028 )
shape = SubResource( 8 )

[node name="Arm_lower_L" type="RigidBody2D" parent="Torso/Arm_upper_L"]
position = Vector2( 0.0729942, 33.6123 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_L/Arm_lower_L"]
position = Vector2( 0.0247244, 11.4969 )
shape = SubResource( 9 )

[node name="Arm_hand_L" type="RigidBody2D" parent="Torso/Arm_upper_L/Arm_lower_L"]
position = Vector2( -0.019392, 23.1982 )
rotation = 0.00322485
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Arm_upper_L/Arm_lower_L/Arm_hand_L"]
position = Vector2( -0.150108, 6.8453 )
shape = SubResource( 10 )

[node name="Head" type="RigidBody2D" parent="Torso"]
position = Vector2( 0.00272009, 0.0585327 )
collision_mask = 2
mass = 10.0
physics_material_override = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Head"]
position = Vector2( 0.0635714, -20.6354 )
shape = SubResource( 11 )

[node name="Joints" type="Node2D" parent="."]

[node name="PinJoint2D" type="PinJoint2D" parent="Joints"]
position = Vector2( 28.5537, -122.899 )
rotation = -6.80098e-07
node_a = NodePath("../../Torso/Arm_upper_R")
node_b = NodePath("../../Torso/Arm_upper_R/Arm_lower_R")
disable_collision = false

[node name="PinJoint2D2" type="PinJoint2D" parent="Joints"]
position = Vector2( 28.6228, -100.072 )
rotation = -6.80098e-07
node_a = NodePath("../../Torso/Arm_upper_R/Arm_lower_R")
node_b = NodePath("../../Torso/Arm_upper_R/Arm_lower_R/Arm_hand_R")
disable_collision = false

[node name="PinJoint2D3" type="PinJoint2D" parent="Joints"]
position = Vector2( -27.3359, -122.899 )
rotation = -6.80098e-07
node_a = NodePath("../../Torso/Arm_upper_L")
node_b = NodePath("../../Torso/Arm_upper_L/Arm_lower_L")
disable_collision = false

[node name="PinJoint2D4" type="PinJoint2D" parent="Joints"]
position = Vector2( -27.2667, -100.072 )
rotation = -6.80098e-07
node_a = NodePath("../../Torso/Arm_upper_L/Arm_lower_L")
node_b = NodePath("../../Torso/Arm_upper_L/Arm_lower_L/Arm_hand_L")
disable_collision = false

[node name="PinJoint2D5" type="PinJoint2D" parent="Joints"]
position = Vector2( 11.5689, -48.2039 )
rotation = 0.0011783
node_a = NodePath("../../Torso/Hip/Leg_upper_R")
node_b = NodePath("../../Torso/Hip/Leg_upper_R/Leg_lower_R")
disable_collision = false

[node name="PinJoint2D6" type="PinJoint2D" parent="Joints"]
position = Vector2( 11.5906, -9.26723 )
rotation = -0.00116864
node_a = NodePath("../../Torso/Hip/Leg_upper_R/Leg_lower_R")
node_b = NodePath("../../Torso/Hip/Leg_upper_R/Leg_lower_R/Leg_feet_R")
disable_collision = false

[node name="PinJoint2D7" type="PinJoint2D" parent="Joints"]
position = Vector2( -12.5198, -48.0278 )
rotation = -0.00148688
node_a = NodePath("../../Torso/Hip/Leg_upper_L")
node_b = NodePath("../../Torso/Hip/Leg_upper_L/Leg_lower_L")
disable_collision = false

[node name="PinJoint2D8" type="PinJoint2D" parent="Joints"]
position = Vector2( -13.1747, -9.36578 )
rotation = -0.00148688
node_a = NodePath("../../Torso/Hip/Leg_upper_L/Leg_lower_L")
node_b = NodePath("../../Torso/Hip/Leg_upper_L/Leg_lower_L/Leg_feet_L")
disable_collision = false

[node name="PinJoint2D9" type="PinJoint2D" parent="Joints"]
position = Vector2( 0.0158521, -114.507 )
rotation = 4.00469e-08
node_a = NodePath("../../Torso")
node_b = NodePath("../../Torso/Hip")
disable_collision = false

[node name="PinJoint2D10" type="PinJoint2D" parent="Joints"]
position = Vector2( 20.9738, -153.926 )
rotation = 4.00469e-08
node_a = NodePath("../../Torso")
node_b = NodePath("../../Torso/Arm_upper_R")
disable_collision = false

[node name="PinJoint2D11" type="PinJoint2D" parent="Joints"]
position = Vector2( -20.7007, -153.266 )
rotation = 4.00469e-08
node_a = NodePath("../../Torso")
node_b = NodePath("../../Torso/Arm_upper_L")
disable_collision = false

[node name="PinJoint2D12" type="PinJoint2D" parent="Joints"]
position = Vector2( -0.125931, -156.681 )
rotation = 4.00469e-08
node_a = NodePath("../../Torso")
node_b = NodePath("../../Torso/Head")
disable_collision = false

[node name="PinJoint2D13" type="PinJoint2D" parent="Joints"]
position = Vector2( 11.4539, -87.4253 )
rotation = -0.00308069
node_a = NodePath("../../Torso/Hip")
node_b = NodePath("../../Torso/Hip/Leg_upper_R")

[node name="PinJoint2D14" type="PinJoint2D" parent="Joints"]
position = Vector2( -11.3929, -87.4253 )
rotation = -0.00308069
node_a = NodePath("../../Torso/Hip")
node_b = NodePath("../../Torso/Hip/Leg_upper_L")

[node name="PinJoint2D15" type="PinJoint2D" parent="Joints"]
position = Vector2( -8.93258, -146.96 )
node_a = NodePath("../../MainController")
node_b = NodePath("../../Torso")

[node name="PinJoint2D16" type="PinJoint2D" parent="Joints"]
position = Vector2( 10.568, -146.96 )
node_a = NodePath("../../MainController")
node_b = NodePath("../../Torso")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Test"
anims/Test = SubResource( 12 )
